enabled wait features on editing

--- a/MovieReview.Web/templates/editReview.html
+++ b/MovieReview.Web/templates/editReview.html
@@ -1,4 +1,10 @@
-﻿<form class="form-horizontal" name="editReviewForm" novalidate role="form" data-ng-submit="editReview()">
+﻿<div id="loader" style="display: none">
+    <i class="fa fa-cog fa-fw fa-spin fa-2x"> </i> Getting Review
+</div>
+<div id="loader1" style="display: none">
+    <i class="fa fa-cog fa-fw fa-spin fa-2x"> </i> Saving Review
+</div>
+<form class="form-horizontal" name="editReviewForm" novalidate role="form" data-ng-submit="editReview()">
     <div class="panel panel-primary">
         <div class="panel-heading"><b>Edit Review</b></div>
         <div class="panel-body">
