--- a/MovieReview.Web/templates/editMovie.html
+++ b/MovieReview.Web/templates/editMovie.html
@@ -1,4 +1,10 @@
-﻿<form class="form-horizontal" name="editMovieForm" novalidate role="form" data-ng-submit="editMovie()">
+﻿<div id="loader" style="display: none">
+    <i class="fa fa-cog fa-fw fa-spin fa-2x"> </i> Getting Movie
+</div>
+<div id="loader1" style="display: none">
+    <i class="fa fa-cog fa-fw fa-spin fa-2x"> </i> Saving Movie
+</div>
+<form class="form-horizontal" name="editMovieForm" novalidate role="form" data-ng-submit="editMovie()">
     <div class="panel panel-primary">
         <div class="panel-heading"><b>Edit Movie</b></div>
         <div class="panel-body">
